--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "angular2-busy": "^2.0.4",
     "angular2-moment": "^1.8.0",
     "core-js": "^2.4.1",
+    "datatables": "^1.10.13",
+    "datatables.net": "^1.10.16",
+    "jquery": "^3.3.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
