--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "datatables.net": "^1.10.16",
     "jquery": "^3.3.1",
     "rxjs": "^5.5.6",
+    "sweetalert2": "^7.12.15",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
