--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "datatables": "^1.10.13",
     "datatables.net": "^1.10.16",
+    "file-saver": "^1.3.8",
     "jquery": "^3.3.1",
     "rxjs": "^5.5.6",
     "sweetalert2": "^7.12.15",
