--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "file-saver": "^1.3.8",
     "jquery": "^3.3.1",
     "rxjs": "^5.5.6",
-    "sweetalert2": "^7.12.15",
+    "sweetalert": "^2.1.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
